--- a/Disitruidora - API/Domain/Domain.csproj
+++ b/Disitruidora - API/Domain/Domain.csproj
@@ -3,6 +3,6 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="8.1.0-preview2" />
+    <PackageReference Include="FluentValidation.WebApi" Version="8.1.0" />
   </ItemGroup>
 </Project>
