--- a/Disitruidora - API/Domain/Domain.csproj
+++ b/Disitruidora - API/Domain/Domain.csproj
@@ -3,6 +3,11 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="FluentValidation.WebApi" Version="8.1.0" />
+    <PackageReference Include="FluentValidation" Version="8.1.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="FluentValidation, Version=8.0.0.0, Culture=neutral, PublicKeyToken=7de548da2fbae0f0">
+      <HintPath>..\..\..\..\.nuget\packages\fluentvalidation\8.0.0\lib\net45\FluentValidation.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
