--- a/Disitruidora - API/Application/Application.csproj
+++ b/Disitruidora - API/Application/Application.csproj
@@ -5,4 +5,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
+  </ItemGroup>
 </Project>
