refactoring some entities and adding register/edit/delete

--- a/Disitruidora - API/Api/Api.csproj
+++ b/Disitruidora - API/Api/Api.csproj
@@ -16,5 +16,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Application\Application.csproj" />
     <ProjectReference Include="..\InfraData\InfraData.csproj" />
+    <ProjectReference Include="..\UoW\UoW.csproj" />
   </ItemGroup>
 </Project>
