--- a/Disitruidora - API/Api/Api.csproj
+++ b/Disitruidora - API/Api/Api.csproj
@@ -16,6 +16,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Application\Application.csproj" />
     <ProjectReference Include="..\InfraData\InfraData.csproj" />
+    <ProjectReference Include="..\IoC\IoC.csproj" />
     <ProjectReference Include="..\UoW\UoW.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DepencyInjection\" />
   </ItemGroup>
 </Project>
